force-app/main/default/objects/CustomerEvents__c/CustomerEvents__c.object-meta.xml
<CustomObject>
    <description>Holds engagement data that is exchanged between Salesforce and Activator</description>
    <label>Customer Event</label>
    <nameField>
        <displayFormat>EVENT{00000000}</displayFormat>
        <label>Customer Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>