force-app/main/default/objects/CustomerEvents__c/fields/Activator_CustomerEventId__c.field-meta.xml
<CustomField>
    <fullName>Activator_CustomerEventId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id of the Customer Event record in the Activator System</inlineHelpText>
    <label>Activator Customer Event Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>