force-app/main/default/objects/CustomerEvents__c/fields/Activator_MarketingCampaignId__c.field-meta.xml
<CustomField>
    <fullName>Activator_MarketingCampaignId__c</fullName>
    <inlineHelpText>Id of the Marketing Campaign in the Activator System</inlineHelpText>
    <label>Activator Marketing Campaign Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>