force-app/main/default/objects/CustomerEvents__c/fields/CustomerEventType__c.field-meta.xml
<CustomField>
    <fullName>CustomerEventType__c</fullName>
    <inlineHelpText>Type of event that occurred</inlineHelpText>
    <label>Customer Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generic Event</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Sent Email</fullName>
            </value>
            <value>
                <fullName>Mailed Letter</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Note Saved</fullName>
            </value>
            <value>
                <fullName>Text Message</fullName>
            </value>
            <value>
                <fullName>Record Inquiry</fullName>
            </value>
            <value>
                <fullName>Conquest View</fullName>
            </value>
            <value>
                <fullName>Email Open</fullName>
            </value>
            <value>
                <fullName>Email Unsubscribe</fullName>
            </value>
            <value>
                <fullName>Email Bounce</fullName>
            </value>
            <value>
                <fullName>Presentation Sheet</fullName>
            </value>
            <value>
                <fullName>Lead Sheet</fullName>
            </value>
            <value>
                <fullName>Email Click</fullName>
            </value>
            <value>
                <fullName>Landing Page Session Start</fullName>
            </value>
            <value>
                <fullName>Landing Page Click</fullName>
            </value>
            <value>
                <fullName>Landing Page Lead</fullName>
            </value>
            <value>
                <fullName>Landing Page Session End</fullName>
            </value>
            <value>
                <fullName>Phone Number Unsubscribe</fullName>
            </value>
            <value>
                <fullName>Test Drive</fullName>
            </value>
            <value>
                <fullName>Follow-up Call</fullName>
            </value>
            <value>
                <fullName>Sales Appointment</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Bdc Activator Call</fullName>
            </value>
            <value>
                <fullName>Undeliverable Email</fullName>
            </value>
            <value>
                <fullName>Remove From All Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>