force-app/main/default/objects/CustomerEvents__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Dealer this event is associated with</inlineHelpText>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Events</relationshipLabel>
    <relationshipName>Customer_Events</relationshipName>
    <type>Lookup</type>
</CustomField>