force-app/main/default/objects/CustomerEvents__c/fields/MarketingCampaignAdType__c.field-meta.xml
<CustomField>
    <fullName>MarketingCampaignAdType__c</fullName>
    <inlineHelpText>Type of campaign</inlineHelpText>
    <label>Marketing Campaign Ad Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Person FollowUp</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Sms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>