force-app/main/default/objects/CustomerEvents__c/fields/MarketingCampaignName__c.field-meta.xml
<CustomField>
    <fullName>MarketingCampaignName__c</fullName>
    <label>Marketing Campaign Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>