force-app/main/default/objects/CustomerEvents__c/fields/Owned_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Owned_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owned Vehicle</label>
    <referenceTo>OwnedVehicles__c</referenceTo>
    <relationshipLabel>Customer Events</relationshipLabel>
    <relationshipName>Customer_Events</relationshipName>
    <type>Lookup</type>
</CustomField>