force-app/main/default/objects/CustomerEvents__c/fields/OwnedVehicleId__c.field-meta.xml
<CustomField>
    <fullName>OwnedVehicleId__c</fullName>
    <externalId>true</externalId>
    <label>Activator Owned Vehicle Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>