force-app/main/default/objects/CustomerEvents__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Person this event is associated with</inlineHelpText>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Events</relationshipLabel>
    <relationshipName>Customer_Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>