force-app/main/default/objects/CustomerEvents__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the campaign was an AdHoc or Recurring</inlineHelpText>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>