force-app/main/default/objects/CustomerEvents__c/fields/SendDate__c.field-meta.xml
<CustomField>
    <fullName>SendDate__c</fullName>
    <inlineHelpText>Date and Time the event occurred</inlineHelpText>
    <label>Send Date</label>
    <type>Date</type>
</CustomField>